<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".institutionsprofile.InstitutionsProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:placeholderImage="@drawable/profile"
                    android:scaleType="centerCrop"
                    app:placeholderImageScaleType="centerCrop"
                    />
              <View
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/bg_little_shadow"/>
            </FrameLayout>

            <TextView
                android:id="@+id/institution_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                />

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/speciality"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    />

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:text="@string/lorem_ipsum"
                android:lineSpacingExtra="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        >

        <ImageButton
            android:id="@+id/back_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back_white"
            android:padding="26dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>
    </RelativeLayout>
</FrameLayout>