<?xml version="1.0" encoding="utf-8"?>
<com.app.wihack.amina.AddOrgChatting.InstitutionRow_
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/organization_picture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.487"
            app:placeholderImage="@drawable/profile"
            app:placeholderImageScaleType="centerCrop"
            app:roundAsCircle="true"
            app:roundedCornerRadius="8dp"/>

        <TextView
            android:id="@+id/organization_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/organization_picture"
            app:layout_constraintStart_toEndOf="@+id/organization_picture"
            app:layout_constraintTop_toTopOf="@+id/organization_picture"
            app:layout_constraintVertical_bias="0.060000002"/>

        <TextView
            android:id="@+id/organization_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_location_on_black"
            android:drawablePadding="4dp"
            android:text="@string/location"
            app:layout_constraintStart_toEndOf="@+id/organization_picture"
            app:layout_constraintTop_toBottomOf="@+id/organization_name"/>

        <TextView
            android:id="@+id/organization_speciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/speciality"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/start_chat_image_button"
            app:layout_constraintStart_toStartOf="@+id/start_chat_image_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"/>

        <ImageButton
            android:id="@+id/start_chat_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organization_speciality"
            app:srcCompat="@drawable/ic_chat_red"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.app.wihack.amina.AddOrgChatting.InstitutionRow_>